# fSAEter

./: .editorconfig  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cluster/slurm/: build_h.sh  extract_tokens.sh  train_sae_ddp.sh
configs/imagenet100/: 00_extract_tokens_dinov2b_reg_10k.yaml  10_train_local_sae_batchtopk_reg_k16.yaml  10_train_local_sae_batchtopk_reg_k32.yaml  11_build_h_local_sae_batchtopk_reg_k16.yaml  12_train_local_sae_matryoshka_reg.yaml
docs/: architecture.md  configuration.md  references.md  scope.md
src/fsaeter/: __init__.py  __main__.py  backbones.py  backends.py  cli.py  config_compat.py
src/fsaeter/data/: __init__.py  cache.py  datasets.py  imagefolder.py
src/fsaeter/h/: __init__.py  build.py  helpers.py
src/fsaeter/inspect/: __init__.py  basic_qc.py  stability.py
src/fsaeter/models/: __init__.py  local_sae.py
src/fsaeter/train/: runner.py  sparse_ops.py  stats.py  triton_ops.py
src/fsaeter/utils/: config.py  distributed.py  repro.py
tests/: manual_speed_tranche_smoke.py  test_basic_qc.py  test_cache.py  test_hf_backbone.py  test_local_sae.py  test_pipeline_smoke.py  test_sparse_backend.py  test_triton_sparse_backend.py
